// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ControlButton should render 1`] = `
<DocumentFragment>
  <div
    class="group"
  >
    <button
      class="ControlButton__ControlButtonStyled-sc-1xp1l1a-0 gPBHgx group"
    >
      <div
        class="absolute inset-0 -mx-0.5 rounded group-focus-visible group-focus:ring-2 ring-theme-primary-400"
      />
    </button>
  </div>
</DocumentFragment>
`;

exports[`ControlButton should render active 1`] = `
<DocumentFragment>
  <div
    class="group"
  >
    <button
      class="ControlButton__ControlButtonStyled-sc-1xp1l1a-0 gPBHgx group"
    >
      <div
        class="absolute inset-0 -mx-0.5 rounded group-focus-visible group-focus:ring-2 ring-theme-primary-400"
      />
    </button>
  </div>
</DocumentFragment>
`;

exports[`ControlButton should render disabled 1`] = `
<DocumentFragment>
  <div
    class="group"
  >
    <button
      class="ControlButton__ControlButtonStyled-sc-1xp1l1a-0 gZgPQe group"
      disabled=""
    >
      <div
        class="absolute inset-0 -mx-0.5 rounded group-focus-visible group-focus:ring-2 ring-theme-primary-400"
      />
    </button>
  </div>
</DocumentFragment>
`;

exports[`ControlButton should render with dot 1`] = `
<DocumentFragment>
  <div
    class="group"
  >
    <button
      class="ControlButton__ControlButtonStyled-sc-1xp1l1a-0 gPBHgx group"
    >
      <div
        class="flex absolute right-0 justify-center items-center -mt-3 w-3 h-3 rounded-full transition-all duration-100 ease-linear bg-theme-background mr-1"
      >
        <div
          class="w-2 h-2 rounded-full bg-theme-primary-500"
        />
      </div>
      <div
        class="absolute inset-0 -mx-0.5 rounded group-focus-visible group-focus:ring-2 ring-theme-primary-400"
      />
    </button>
  </div>
</DocumentFragment>
`;

exports[`ControlButton should render without border 1`] = `
<DocumentFragment>
  <div
    class="group"
  >
    <button
      class="ControlButton__ControlButtonStyled-sc-1xp1l1a-0 jDlLhf group"
    >
      <div
        class="absolute inset-0 -mx-0.5 rounded group-focus-visible group-focus:ring-2 ring-theme-primary-400"
      />
    </button>
  </div>
</DocumentFragment>
`;

exports[`ControlButton should render without border and with dot 1`] = `
<DocumentFragment>
  <div
    class="group"
  >
    <button
      class="ControlButton__ControlButtonStyled-sc-1xp1l1a-0 jDlLhf group"
    >
      <div
        class="flex absolute right-0 justify-center items-center -mt-3 w-3 h-3 rounded-full transition-all duration-100 ease-linear bg-theme-background -mr-1.5"
      >
        <div
          class="w-2 h-2 rounded-full bg-theme-primary-500"
        />
      </div>
      <div
        class="absolute inset-0 -mx-0.5 rounded group-focus-visible group-focus:ring-2 ring-theme-primary-400"
      />
    </button>
  </div>
</DocumentFragment>
`;
